--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "start": "next start"
   },
   "dependencies": {
-    "gray-matter": "^4.0.2",
+    "gray-matter": "^4.0.3",
     "next": "12.0.8",
-    "nextra": "^2.0.0-beta.5",
-    "nextra-theme-blog": "^2.0.0-beta.5",
+    "nextra": "^2.12.3",
+    "nextra-theme-blog": "^2.12.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "rss": "^1.2.2"
