--- a/package.json
+++ b/package.json
@@ -2,18 +2,25 @@
   "private": true,
   "license": "MIT",
   "scripts": {
+    "build": "next build",
+    "clean": "rimraf .next .turbo",
     "dev": "next",
-    "build": "node ./scripts/gen-rss.js && next build",
     "start": "next start"
   },
   "dependencies": {
-    "gray-matter": "^4.0.3",
-    "next": "12.0.8",
-    "nextra": "^2.12.3",
-    "nextra-theme-blog": "^2.12.3",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "rss": "^1.2.2"
+    "next": "^13.4.19",
+    "nextra": "2.12.3",
+    "nextra-theme-blog": "2.12.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
+  "dependenciesMeta": {
+    "nextra": {
+      "injected": true
+    },
+    "nextra-theme-blog": {
+      "injected": true
+    }
   },
   "prettier": {
     "arrowParens": "always",
